packages/markwiemer.com/public/styles.css
/* https://developer.mozilla.org/en-US/docs/Web/CSS/Guides/Cascading_variables/Using_custom_properties */
/* :root is a common practice for global reference */
:root {
  --body-bg-dark: black;
  --body-bg-light: white;
  --code-bg-dark: rgb(33, 38, 44);
  --code-bg-light: rgb(214, 223, 233);
  --font-size-default: 18px;
  --img-border-dark: var(--text-primary-dark);
  --img-border-light: var(--text-primary-light);
  --line-height-default: 1.5em;
  --link-active-dark: var(--text-primary-dark);
  --link-active-light: var(--text-primary-light);
  --link-primary-dark: rgb(0, 162, 174);
  --link-primary-light: rgb(9 115 131);
  --link-visited-dark: rgb(219, 8, 219);
  --link-visited-light: rgb(107, 2, 107);
  --nav-bg-dark: var(--body-bg-dark);
  --nav-bg-light: var(--body-bg-light);
  --nav-open-width: calc(max(144px, 20vw));
  --nav-open-time: 0.2s;
  --text-primary-dark: gainsboro;
  --text-primary-light: black;
  --z-index-nav-main: 1;
  --z-index-nav-button: 2;
}

::selection {
  /* todo make a:hover border go away when ::selection is applied */
  color: var(--text-primary-light);
  background-color: var(--link-primary-light);

  @media (prefers-color-scheme: dark) {
    color: var(--text-primary-dark);
    background-color: var(--link-primary-dark);
  }
}

nav {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  height: 100%;
  left: 0;
  overflow-x: hidden;
  padding-bottom: 8px;
  padding-top: 40px;
  position: fixed;
  top: 0;
  transition: var(--nav-open-time);
  width: 0;
  z-index: var(--z-index-nav-main);

  & > * {
    padding-left: 4px;
  }

  & > h2 {
    font-size: var(--font-size-default);
    line-height: var(--line-height-default);
  }

  background-color: var(--nav-bg-light);
  color: var(--text-primary-light);

  @media (prefers-color-scheme: dark) {
    background-color: var(--nav-bg-dark);
    color: var(--text-primary-dark);
  }

  &[aria-expanded="true"] {
    width: var(--nav-open-width);
    /* todo border disappears before transition is done */
    border-right: 1px solid var(--text-primary-light);

    @media (prefers-color-scheme: dark) {
      border-color: var(--text-primary-dark);
    }
  }
}

#openNav {
  width: 30px;
  border: 1px solid var(--text-primary-light);
  border-radius: 4px;
  margin-top: 4px;
  margin-left: -2px;
  cursor: pointer;
  position: fixed;
  top: 0;
  left: 0;
  transition: transform var(--nav-open-time) ease;

  @media (prefers-color-scheme: dark) {
    border-color: var(--text-primary-dark);
  }
}

body.nav-open #openNav {
  transform: translateX(calc(var(--nav-open-width) - 27px));
  z-index: var(--z-index-nav-button);
}

body,
button {
  line-height: var(--line-height-default);
  /* Order matters for font-family */
  font-family:
    "Segoe UI",
    "Segoe UI Web (West European)",
    -apple-system,
    BlinkMacSystemFont,
    Roboto,
    "Helvetica Neue",
    sans-serif;
  font-size: var(--font-size-default);

  background-color: var(--body-bg-light);
  color: var(--text-primary-light);

  @media (prefers-color-scheme: dark) {
    background-color: var(--body-bg-dark);
    color: var(--text-primary-dark);
  }
}

body {
  /* Add 1em below to allow user to sanity-check it's the true end-of-page */
  /* Use margin instead of padding as most user agents have a margin we don't want */
  margin: 0 0 1em 0;
}

figcaption {
  font-size: smaller;
  text-align: center;
}

h1 {
  font-size: 3em;
  font-weight: 600;
  line-height: 52px;
  text-align: center;
  margin-bottom: 12px;
}

div {
  display: flex;
  flex-direction: column;
}

figure {
  margin: 0;
}

footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  & hr {
    width: 640px;
  }
}

hr {
  width: 320px;
  max-width: calc(100% - 64px);
}

a {
  text-decoration: underline;
  border-radius: 5px;

  /* See docs/tests.md for link state test matrix */
  color: var(--link-primary-light);
  &:hover {
    outline: 2px solid var(--link-primary-light);
  }
  &:visited {
    color: var(--link-visited-light);
  }
  &:visited:hover {
    outline: 2px solid var(--link-visited-light);
  }
  &:visited:active {
    outline: 2px solid var(--link-active-light);
    color: var(--link-active-light);
  }
  &:active {
    outline: 2px solid var(--link-active-light);
    color: var(--link-active-light);
  }

  @media (prefers-color-scheme: dark) {
    color: var(--link-primary-dark);
    &:hover {
      outline: 2px solid var(--link-primary-dark);
    }
    &:visited {
      color: var(--link-visited-dark);
    }
    &:visited:hover {
      outline: 2px solid var(--link-visited-dark);
    }
    &:visited:active {
      outline: 2px solid var(--link-active-dark);
      color: var(--link-active-dark);
    }
    &:active {
      outline: 2px solid var(--link-active-dark);
      color: var(--link-active-dark);
    }
  }
}

div.headerImages {
  flex-direction: row;
  align-items: center;
  column-gap: 1em;
  /* Row-gap in case of wraparound */
  row-gap: 1em;
  align-self: center;
  flex-wrap: wrap;
  justify-content: space-around;
  padding-bottom: 1em;
}

img.headerImage {
  height: 12em;
  width: 12em;
}

/* Apply to divs to get center margin */
.article {
  margin: 0 auto;
  max-width: 640px;
  @media (max-width: 640px) {
    /* Adjust vertical padding as well, generally "cozier" view */
    padding: 4px;
    max-width: calc(100vw - 24px);
  }
  img {
    border-radius: 10px;
  }
  figure img {
    max-width: 100%;
  }
}

blockquote {
  border-left: 4px solid;
  padding-left: 1em;
  margin-left: 0;
}

img.border {
  @media (prefers-color-scheme: dark) {
    border: 2px solid var(--img-border-dark);
  }
  @media (prefers-color-scheme: light) {
    border: 2px solid var(--img-border-light);
  }
}

figure.center {
  display: flex;
  flex-direction: column;
  align-items: center;
}

code {
  font-size: smaller;
  @media (prefers-color-scheme: dark) {
    background-color: var(--code-bg-dark);
  }
  @media (prefers-color-scheme: light) {
    background-color: var(--code-bg-light);
  }
}

